ENEX FSL/snapshotDownload (1)/objects/Quote.object
<CustomObject><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><externalSharingModel>ControlledByParent</externalSharingModel><fields><fullName>AFE__c</fullName><externalId>false</externalId><label>AFE</label><required>false</required><trackFeedHistory>false</trackFeedHistory><type>TextArea</type></fields><fields><fullName>Anexo_Carta_Cotizacion_SCT__c</fullName><externalId>false</externalId><label>Anexo Carta Cotizacion SCT</label><length>131072</length><trackFeedHistory>false</trackFeedHistory><type>Html</type><visibleLines>25</visibleLines></fields><fields><fullName>Aprobado_Cotizacion__c</fullName><defaultValue>false</defaultValue><externalId>false</externalId><label>Aprobado Cotizacion</label><trackFeedHistory>false</trackFeedHistory><type>Checkbox</type></fields><fields><fullName>Aprobado_Dias_de_Credito__c</fullName><defaultValue>false</defaultValue><externalId>false</externalId><label>Aprobado Dias de Credito</label><trackFeedHistory>false</trackFeedHistory><type>Checkbox</type></fields><fields><fullName>Aprobado_FEX_con_Inversion__c</fullName><defaultValue>false</defaultValue><externalId>false</externalId><label>Aprobado FEX con Inversión</label><trackFeedHistory>false</trackFeedHistory><type>Checkbox</type></fields><fields><fullName>Aprobado_Storage__c</fullName><defaultValue>false</defaultValue><externalId>false</externalId><label>Aprobado Storage</label><trackFeedHistory>false</trackFeedHistory><type>Checkbox</type></fields><fields><fullName>Aprobador1__c</fullName><deleteConstraint>SetNull</deleteConstraint><externalId>false</externalId><label>Aprobador1</label><referenceTo>User</referenceTo><relationshipName>Presupuestos</relationshipName><required>false</required><trackFeedHistory>false</trackFeedHistory><type>Lookup</type></fields><fields><fullName>Aprobador2__c</fullName><deleteConstraint>SetNull</deleteConstraint><externalId>false</externalId><label>Aprobador2</label><referenceTo>User</referenceTo><relationshipName>Presupuestos1</relationshipName><required>false</required><trackFeedHistory>false</trackFeedHistory><type>Lookup</type></fields><fields><fullName>Aprobador3__c</fullName><deleteConstraint>SetNull</deleteConstraint><externalId>false</externalId><label>Aprobador3</label><referenceTo>User</referenceTo><relationshipName>Presupuestos2</relationshipName><required>false</required><trackFeedHistory>false</trackFeedHistory><type>Lookup</type></fields><fields><fullName>Autoriza_Precio_CL__c</fullName><deleteConstraint>SetNull</deleteConstraint><externalId>false</externalId><label>Autoriza Precio</label><referenceTo>User</referenceTo><relationshipName>Cotizaciones_Autorizadas</relationshipName><required>false</required><trackFeedHistory>false</trackFeedHistory><type>Lookup</type></fields><fields><fullName>Aviso_de_Aprobacion__c</fullName><externalId>false</externalId><label>Aviso de Aprobación</label><length>32768</length><trackFeedHistory>false</trackFeedHistory><type>Html</type><visibleLines>25</visibleLines></fields><fields><fullName>Calculo_de_Flete__c</fullName><externalId>false</externalId><inlineHelpText>Automático = Se calculará según tabla de Flete. 
<validationRules><fullName>Propietario_Puede_Modificar_en_Borrador</fullName><active>true</active><errorConditionFormula>AND( $User.Id =  Opportunity.OwnerId , text(Status) &lt;&gt;&apos;Borrador&apos;,OR(ISCHANGED(Name),ISCHANGED(Drop_Size_C__c),ISCHANGED(Ventana_de_Entrega_C__c),ISCHANGED(Tiene_o_Abastece_EDS__c),ISCHANGED(Calculo_de_Flete__c),ISCHANGED(Cliente_Retira_en_Planta__c),ISCHANGED(Tiene_Inversion_C__c),ISCHANGED(Nro_de_File__c),ISCHANGED(Descuento_sobre_precio_pizarra_lt__c),ISCHANGED(Duracion_de_Contrato_A_os__c),ISCHANGED(Tipo_Precio_CL__c),ISCHANGED(Condicion_Credito_CL__c),ISCHANGED(Frecuencia_de_Facturacion_CL__c)))</errorConditionFormula><errorDisplayField>Status</errorDisplayField><errorMessage>Solo se puede modificar información de esta Cotización si el Estado = Borrador</errorMessage></validationRules><validationRules><fullName>SCE_Cambiar_Tipo_de_Precio</fullName><active>true</active><errorConditionFormula>if(AND(RecordType.Name =&apos;ShellCard Empresa&apos;,LineItemCount&gt;0, ISCHANGED(Tipo_Precio_CL__c)),true,false)</errorConditionFormula><errorDisplayField>Tipo_Precio_CL__c</errorDisplayField><errorMessage>Para cambiar el Tipo de Precio debe borrar todos los productos de la Cotización,</errorMessage></validationRules><validationRules><fullName>SCE_La_cuenta_No_puede_ser_la_misma</fullName><active>true</active><errorConditionFormula>if(Opportunity.AccountId =  Cuenta_D_relacionada_SCE__c, true, false)</errorConditionFormula><errorDisplayField>Cuenta_D_relacionada_SCE__c</errorDisplayField><errorMessage>La cuenta relacionada debe ser diferente a la Cuenta de la Cotización.</errorMessage></validationRules><validationRules><fullName>SCE_PrePago_CondicionCredito_Debe_ser_C0</fullName><active>true</active><errorConditionFormula>AND(RecordType.Name = &apos;ShellCard Empresa&apos;, Segmento_CL__c = &apos;ShellCard Empresa Pre-Pago&apos;,text(Condicion_Credito_CL__c)&lt;&gt;&apos;C00&apos;)</errorConditionFormula><errorDisplayField>Condicion_Credito_CL__c</errorDisplayField><errorMessage>Si el Segmento es = ShellCard Empresa Pre-Pago , la Condición de Crédito debe ser C00</errorMessage></validationRules><validationRules><fullName>SCE_Se_debe_Ingresar_Tipo_Fac_y_Cuenta_D</fullName><active>true</active><errorConditionFormula>AND( RecordType.Name =&apos;ShellCard Empresa&apos;,ISBLANK(text(Tipo_de_Facturacion_SCE__c)),Cuenta_D_relacionada_SCE__c = null, OR(Grabar_precio_shellcard__c = true, text(Status) = &apos;Aceptado&apos;))</errorConditionFormula><errorDisplayField>Tipo_de_Facturacion_SCE__c</errorDisplayField><errorMessage>Antes de marcar casilla Grabar Precio ShellCard o cambiar el estado a Aceptado, debe completar los datos de Tipo de Facturación y Cuenta D Relacionada.</errorMessage></validationRules><validationRules><fullName>SCT_No_puede_Cambiar_Tipo_de_Precio</fullName><active>true</active><description>No puede cambiar a otra Lista de Precio si tiene Productos (SCT)</description><errorConditionFormula>AND(
ISCHANGED(Tipo_Precio_CL__c),
LineItemCount&gt;0,
OR(
Text(PRIORVALUE(Tipo_Precio_CL__c))=&apos;Precio SCT Región&apos;,
Text(PRIORVALUE(Tipo_Precio_CL__c))=&apos;Precio SCT Grupo&apos;,
Text(PRIORVALUE(Tipo_Precio_CL__c))=&apos;Precio SCT País&apos;
)
)</errorConditionFormula><errorDisplayField>Tipo_Precio_CL__c</errorDisplayField><errorMessage>No puede cambiar entre Listas de Preciosen ShellCard Transporte cuando existen Productos de Cotizacion, borrelos o cree una nueva cotización.</errorMessage></validationRules><validationRules><fullName>SI_es_Segmento_FEX_Nro_File_y_Descuento</fullName><active>true</active><errorConditionFormula>if(AND(Segmento_CL__c=&apos;FEX&apos;, OR(ISNULL(Nro_de_File__c),Nro_de_File__c=0,Descuento_sobre_precio_pizarra_lt__c=0,ISNULL(Descuento_sobre_precio_pizarra_lt__c))),true,false)</errorConditionFormula><errorDisplayField>Descuento_sobre_precio_pizarra_lt__c</errorDisplayField><errorMessage>Si el Segmento es FEX, el Nro de File y el Descuento sobre precio pizarra ($/lt) deben tener valores</errorMessage></validationRules><validationRules><fullName>Segmento_Shellcard</fullName><active>true</active><description>Si el segmento es Shellcard Transporte entonces la frecuencia de facturación es quincenal.</description><errorConditionFormula>AND(Nombre_Tipo_Registro_CL__c
=&apos;Combustible&apos;,Segmento_CL__c == &apos;Shellcard Transporte&apos;,  TEXT(Frecuencia_de_Facturacion_CL__c) &lt;&gt; &apos;Quincenal&apos;)</errorConditionFormula><errorDisplayField>Frecuencia_de_Facturacion_CL__c</errorDisplayField><errorMessage>Debe seleccionar frecuencia de facturación &apos;Quincenal&apos; debido a que la cuenta de esta cotización tiene el segmento &apos;Shellcard Transporte&apos;</errorMessage></validationRules><validationRules><fullName>Si_Tiene_Inversion_Comente</fullName><active>true</active><description>Si tiene inversión se debe indicar un comentario</description><errorConditionFormula>AND(Tiene_Inversion_C__c, OR(Description=null,Description=&apos;&apos;))</errorConditionFormula><errorDisplayField>Description</errorDisplayField><errorMessage>Si Tiene Inversion debe ingresar un Comentario</errorMessage></validationRules><validationRules><fullName>Si_Tiene_o_Abastece_una_EDS_Comente</fullName><active>true</active><description>Si Tiene o Abastece una EDS debe Comentar</description><errorConditionFormula>AND(Text(Tiene_o_Abastece_EDS__c)=&apos;Si&apos;,OR(Description=null,Description=&apos;&apos;))</errorConditionFormula><errorDisplayField>Description</errorDisplayField><errorMessage>Si Tiene o Abastece una Estación de Servicio debe ingresar un Comentario</errorMessage></validationRules><validationRules><fullName>Si_tiene_o_Abastece_una_EDS</fullName><active>true</active><errorConditionFormula>if(OR(Segmento_CL__c=&apos;Distribuidores GE&apos;,Segmento_CL__c=&apos;Distribuidores PYME&apos;),if(text(Tiene_o_Abastece_EDS__c)=null,true,false),false)</errorConditionFormula><errorDisplayField>Tiene_o_Abastece_EDS__c</errorDisplayField><errorMessage>Si el Segmento es Distribuidores GE o Distribuidores PYME, debe indicar si tiene o abastece una Estación de Servicio</errorMessage></validationRules><validationRules><fullName>Sin_Cambios_Si_ya_no_esta_en_Borrador</fullName><active>true</active><description>No permite cambiar ciertos campos si el estado de la Cotizacion es diferente a Borrador</description><errorConditionFormula>AND(OR(text(Status)=&apos;Aprobada&apos;,text(Status)=&apos;Aceptada&apos;,text(Status)=&apos;Rechazada&apos;,text(Status)=&apos;Denegada&apos;),OR(ISCHANGED(Drop_Size_C__c),ISCHANGED(Ventana_de_Entrega_C__c),ISCHANGED(Condicion_Credito_CL__c),ISCHANGED(Tiene_Inversion_C__c),ISCHANGED(Tiene_o_Abastece_EDS__c),ISCHANGED(LineItemCount)))</errorConditionFormula><errorDisplayField>AFE__c</errorDisplayField><errorMessage>Solo se puede modificar si la Cotizacion esta en Estado Borrador. Ahora solo puede cambiar el estado desde Aprobada a Aceptada o Denegada.</errorMessage></validationRules><validationRules><fullName>Solicitar_Clasificacion_Riesgo</fullName><active>true</active><errorConditionFormula>AND(NOT(Opportunity.Account.Segmento_Cotizacion__r.Asegurado__c), text(Opportunity.Account.Clasificacion_de_Riesgo__c)=null, RecordType.Name &lt;&gt;&apos;Lubricante&apos;)</errorConditionFormula><errorDisplayField>AFE__c</errorDisplayField><errorMessage>El  Segmento de la Cuenta  no esta asegurado, debe ingresar Clasificación de Riesgo en la Cuenta</errorMessage></validationRules><validationRules><fullName>Tipo_de_Precio</fullName><active>true</active><description>El campo Tipo de Precio es Obligatorio</description><errorConditionFormula>AND(ISBLANK(TEXT(Tipo_Precio_CL__c)), OR(RecordType.Name == &apos;Combustible&apos;, RecordType.Name == &apos;Lubricante&apos;))</errorConditionFormula><errorDisplayField>Tipo_Precio_CL__c</errorDisplayField><errorMessage>Debe seleccionar un Tipo de Precio</errorMessage></validationRules><validationRules><fullName>requerido_localidad_despacho</fullName><active>true</active><errorConditionFormula>AND(Nombre_Tipo_Registro_CL__c =&apos;Combustible&apos;,
OR(isnull(Localidad_de_Despacho_CL__c),isblank(Localidad_de_Despacho_CL__c))
)</errorConditionFormula><errorMessage>No se puede crear la Cotización porque la Cuenta asociada no tiene Localidad de Despacho. Diríjase a la Cuenta y asocie la Localidad correspondiente.</errorMessage></validationRules><validationRules><fullName>requerido_razon_social</fullName><active>true</active><errorConditionFormula>OR(isnull(Razon_Social_CL__c),isblank(Razon_Social_CL__c))</errorConditionFormula><errorMessage>No se puede crear la Cotización porque la Cuenta asociada no tiene Razón Social ingresada. Diríjase a la Cuenta y asocie la Razón Social correspondiente.</errorMessage></validationRules><validationRules><fullName>requerido_rut</fullName><active>true</active><errorConditionFormula>OR(isnull(RUT_CL__c),isblank(RUT_CL__c))</errorConditionFormula><errorMessage>No se puede crear la Cotización porque la Cuenta asociada no tiene RUT ingresada. Diríjase a la Cuenta y asocie el RUT correspondiente.</errorMessage></validationRules><validationRules><fullName>requerido_segmento_de_la_Cuenta</fullName><active>true</active><description>regla de validación en Cotización para requerir obligatoriamente el Segmento de la Cuenta</description><errorConditionFormula>AND(Nombre_Tipo_Registro_CL__c 

=&apos;Combustible&apos;,OR(isnull(Segmento_CL__c),isblank(Segmento_CL__c))

)</errorConditionFormula><errorMessage>No se puede crear la Cotización porque la Cuenta asociada no tiene Segmento ingresado. Diríjase a la Cuenta y asocie el Segmento correspondiente.</errorMessage></validationRules></CustomObject>